# dispatcher-agents

./: .gitignore  CORRECTED_ARCHITECTURE.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIVEKIT_SETUP.md  MULTI_AGENT_FIX.md  MULTI_AGENT_WORKER_GUIDE.md  QUICKSTART_V2.md  README.md  README_LISTENING_UPDATE.md  TESTING_CHECKLIST_V2.md  UI_FIX_SUMMARY.md  start_agents.bat  start_agents.sh  voice_agent_conversation_system.md
.cursor/commands/: commit.md
backend/: .gitignore  README.md  check_conversation_status.py  pyproject.toml  test_agents.py  test_audio_recording.py  test_integration_v2.py  test_manual_upload.py
backend/agents/: CODE_CHANGES_DETAIL.md  CONVERSATION_FLOW.md  LISTENING_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  __init__.py  conversation_state.py  dispatcher_agent.py  driver_agent.py  multi_agent_worker.py
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/routes/: conversations.py  rooms.py
backend/src/models/: schemas.py
backend/src/services/: conversation_service.py  llm_service.py
backend/tests/: README.md  __init__.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_payload.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentConfigForm.css  AgentConfigForm.tsx  ScenarioForm.css  (+7 more)
memory/milestones/: 001_voice_agent_system_milestones.md
memory/notes/: Livekit.md
memory/system/: system_overview.md  use_cases.md
(+2 files in other folders)
